2012-02-15  Ingo Renner  <ingo.renner@dkd.de>

	* Added a class to generate and check API keys for use with the REST API
	* Added an API key check for the REST API
	* Added tx_solr_ConnectionManager::getConfigurationsBySite()

2012-02-14  Ingo Renner  <ingo.renner@dkd.de>

	!!! Changed plugin.tx_solr.templateFile to plugin.tx_solr.templateFiles - notice the S at the end
	!!! Changed interface tx_solr_PluginCommand to expect an instance of tx_solr_pluginbase_CommandPluginBase as the parent plugin instead of tslib_pibase
	!!! Updated jQuery to v1.7.1, updated jQuery UI to v1.8.16, separated jQuery UI components, restructured javascript resources
	!!! Changed handling of javascript files, all files are now defined in plugin.tx_solr.javascriptFiles and handled by a new tx_solr_JavascriptManager
	!!! Changed handling of CSS files to be consitent with templateFiles and javascriptFiles - now being handled via plugin.tx_solr.cssFiles, fixes issue #12761: Pagebrowse css loaded twice, credits Stefan Sprenger
	!!! Replaced search.filter with search.query.filter, adding support for multiple filters through TypoScript
	!!! Renamed interface tx_solr_AdditionalIndexer to tx_solr_AdditionalPageIndexer
	!!! Changed template variable object marker SOLR to TX_SOLR as it caused trouble when "solr" was used as argument in viewhelpers like the LINK viewhelper
	!!! Removed version numbers from jQuery files
	!!! Renamed tx_solr_facet_FacetRenderer to tx_solr_facet_AbstractFacetRenderer
	!!! Renamed tx_solr_facet_SimpleFacetRenderer to tx_solr_facet_SimpleFacetOptionsRenderer
	!!! Refactored facets rendering
	!!! Refactored tx_solr_facet_SimpleFacetOptionsRenderer to let tx_solr_facet_FacetOption create links and URLs
	!!! Renamed filter parser to filter encoder
	!! Changed the form command to use the tx_solr_CommandPluginAware interface to make form modifiers aware of the current plugin